--- a/ui_server/templates/base.html
+++ b/ui_server/templates/base.html
@@ -23,6 +23,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('settings') }}">Settings</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('strategy') }}">Strategies</a>
+            </li>
           </ul>
         </div>
       </div>
